k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-exporter
  labels:
    app: cloudwatch-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-exporter
  template:
    metadata:
      labels:
        app: cloudwatch-exporter
    spec:
      containers:
      - name: cloudwatch-exporter
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/pipeline-example:$(Build.BuildId)
        ports:
        - containerPort: 80
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
